--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,11 +30,11 @@ jobs:
       - run:
           name: Create artifact directory
           command: mkdir /root/project/reports && mkdir /root/project/reports/junit
-      #- run:
-      #    name: Run tests with JUnit as reporter
-      #    command: cd server && jest auth.controller organizations.controller --ci --runInBand --reporters=default --reporters=jest-junit  --testResultsProcessor="jest-junit"
-      #    environment:
-      #      JEST_JUNIT_OUTPUT_DIR: /root/project/server/reports
+      - run:
+          name: Run tests with JUnit as reporter
+          command: cd server && jest auth.controller organizations.controller --ci --runInBand --reporters=default --reporters=jest-junit  --testResultsProcessor="jest-junit"
+          environment:
+            JEST_JUNIT_OUTPUT_DIR: /root/project/server/reports
       - store_test_results:
           path: /root/project/server/reports
       - store_artifacts:
